#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT(hello, 1.0, BUG-REPORT-ADDRESS@your.com)
AC_CONFIG_SRCDIR([hello_auto_make.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(hello, 0.1)

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
